HW3/javali_tests/others/new/HW3_MarLin/type_error/cast/ErrCast1.javali
class A {

}

class B extends A {

}

class C {

}

class Main {

   void main() {
      A a;
      B b;
      
      a = new A();
      b = new B();
      
      a = (C) b;
   }
}
